fix: font on mobile fix#3

--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,9 @@ h1, h2, h3, h4, h5, h6, p, button, .link-tag {
 	@media (min-width: 480px) {
 		font-size: small;
 	}
+	@media (min-width: 720px) {
+		font-size: large;
+	}
 	@media (min-width: 1024px) {
 		font-size: x-large;
 	}
